Additional spacing fixes
Contributes towards fixing #159

--- a/blocks/contact/contact.css
+++ b/blocks/contact/contact.css
@@ -91,11 +91,11 @@
   }
 
   .profile-collection__content {
-    padding-bottom: var(--spacing-vertical-l)
+    padding-bottom: var(--spacing-vertical-xl)
   }
 
   .profile-collection__item {
-    margin-top: var(--spacing-vertical-l)
+    margin-top: var(--spacing-vertical-xl)
   }
 
   .profile-collection__controls {
