--- a/styles/simplified-styles.css
+++ b/styles/simplified-styles.css
@@ -11,6 +11,7 @@
     --headline-color-eyebrow: var(--border-color-active);
     --spacing-vertical-m: 1.5rem;
     --spacing-vertical-l: 2rem;
+    --spacing-vertical-xl: 2.5rem;
     --spacing-vertical-xxl: 3.5rem;
     --spacing-vertical-s: 1rem;
     --section-margin: 1.5rem;
@@ -48,8 +49,8 @@ a:hover {
 
 .text-block {
     margin-top: calc(var(--spacing-vertical-l) + var(--spacing-vertical-xl));
-    margin-bottom: calc(var(--spacing-vertical-xl) * 2);
-  }
+    margin-bottom: calc(var(--spacing-vertical-xl) + var(--spacing-vertical-xxl));
+}
 
 .text-block li {
     list-style-type: disc;
@@ -104,7 +105,7 @@ a:hover {
 }
 
 /* TODO: Sections not yet simplified are added as :not exceptions. This list  should shrink as we simplify sections */
-main .section:not(.carousel-container):not(.text-block):not(.contact-container):not(.columns-container):not(.article-list-container):not(.footer) {
+main .section:not(.carousel-container):not(.text-block):not(.contact-container):not(.columns-container):not(.article-list-container):not(.footer):not(.columns-new-container):not(.collapse-container):not(.hero-container) {
     margin: 0 auto;
     margin-top: var(--spacing-vertical-xxl);
     margin-bottom: var(--spacing-vertical-xxl);
